--- a/conda_environment.yaml
+++ b/conda_environment.yaml
@@ -1,4 +1,4 @@
-name: llamagen
+name: ar-grpo-curr
 channels:
   - defaults
   - https://repo.anaconda.com/pkgs/main
@@ -130,7 +130,7 @@ dependencies:
       - tensorboard==2.19.0
       - tensorboard-data-server==0.7.2
       - tiktoken==0.9.0
-      - timm==1.0.19
+      - timm
       - tokenizer==3.4.5
       - tokenizers==0.21.1
       - tomli==2.2.1
@@ -150,4 +150,4 @@ dependencies:
       - xxhash==3.5.0
       - yarl==1.20.1
       - zipp==3.23.0
-prefix: llamagen
+prefix: ar-grpo-curr
